# nanobasic

./: CMakeLists.txt  README.md  TINY.h  TINYcompiler.c  TINYcore.c  TINYint.h  TINYmemory.c  TINYruntime.c  TINYscanner.c  TINYsymbols.c  api.lua  basis.bas  build.sh  disasm.py  jbi.h  jbi_cfg.h  jbi_compiler.c  jbi_int.h  jbi_memory.c  jbi_runtime.c  jbi_scanner.c  jbi_string.c  joesbasic.py  lineno.bas  main.c  manual.md  nanobasic-1.0-0.rockspec  nb.h  nb_cfg.h  nb_compiler.c  nb_int.h  nb_memory.c  nb_runtime.c  nb_scanner.c  test.bas  tinybasic.py
examples/: basicV2.bas  basis.bas  byte_access.bas  calc_pi.bas  ext_func.bas  heron.bas  lineno.bas  on_gosub.bas  read_data.bas  temp.bas  test.bas  trace_on.bas
src/: nb.h  nb_cfg.h  nb_compiler.c  nb_int.h  nb_lua.c  nb_memory.c  nb_runtime.c  nb_scanner.c
test/: CMakeLists.txt  disasm.py  main.c  simu.lua  test.bas
